# fastapi_blog

./: .gitignore  README.md
backend/: database.py  main.py  models.py  pyproject.toml  schema.py  snippets.txt  test_main.py
backend/routes/: posts.py  users.py
backend/templates/: home.html  post.html
